Add verify_course3.sh, and fix what it caught
Course 3 shipped 148 files with no verifier, while the README called
verify_course1.sh and verify_course2.sh "what makes this repo runnable
rather than a code dump". This adds the third one: 236 checks over
c3-unit01..06 and c3-tiffinbox, proved from a fresh clone into a path
containing a space, with an empty local repository — 236 PASS / 0 FAIL,
13 minutes cold.

Offline receipts are proved, not assumed. verify_course2.sh once used
`mvn -o` everywhere and went 15 FAIL / 27 PASS from a cold clone. Here
each of the 17 offline claims runs as a pair: the ordinary online build
into the scratch repository first, then the same command with -o in the
same repository. No offline claim turned out to be false.

The five defects it found, all in code a viewer runs:

- c3-unit04 "Offline receipt": the prose said "drop the flag and these
  read your real ~/.m2" above four commands that all carry the flag.
  Read as an imperative it told the viewer to do the one thing that
  pollutes their repository.
- c3-unit04 enforcer table: a warn-only rule prints exactly one
  [WARNING] line — the rule header. The message and the dependency
  trace under it are unprefixed, unlike the failing case where all five
  lines are [ERROR]. That is why a grep -c '^\[WARNING\]' under-reports.
- c3-unit02 stale-sibling: -Dmdep.outputFile is relative to the module
  the goal ran in, so the file lands in tiffinbox-kitchen/cp.txt and the
  README's `cat cp.txt` fails from the unit folder.
- Exercise READMEs of units 01, 03, 04, 05, 06 dropped the isolated
  local repository their course insists on.
- c3-unit02's two shell scripts hardcoded JAVA_HOME, silently discarding
  whatever the viewer exported. They now honour it, require JDK 25, and
  exit 2 with a clear message instead of building against a path that
  does not exist.

Units 01, 03 and 05 keep their flag-free main commands — they only
compile and package, so nothing of the course is installed — but t